kubernetes/3-mongo/0-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo-express
    labels:
        app: mongo-express
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongo-express
    template:
        metadata:
            labels:
                app: mongo-express
        spec:
            containers:
                - name: mongo
                  image: mongo
                  resources:
                      limits:
                          cpu: '800m'
                          memory: '1Gi'
                  ports:
                      - containerPort: 27017
                - name: express
                  image: mongo-express
                  resources:
                      limits:
                          cpu: '200m'
                          memory: '256Mi'
                  ports:
                      - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
    name: mongo-express
spec:
    selector:
        app: mongo-express
    ports:
        - name: mongo
          protocol: TCP
          port: 27017
          targetPort: 27017
        - name: express
          protocol: TCP
          port: 8081
          targetPort: 8081
