kubernetes/3-mongo/1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: mongo-express
spec:
    rules:
        - http:
              paths:
                  - path: /database
                    pathType: Prefix
                    backend:
                        service:
                            name: mongo-express
                            port:
                                number: 27017
                  - path: /dashboard
                    pathType: Prefix
                    backend:
                        service:
                            name: mongo-express
                            port:
                                number: 8081
